--- a/manual/zh/puzzles/AR_VR.html
+++ b/manual/zh/puzzles/AR_VR.html
@@ -53,7 +53,7 @@
       <dd>位于零坐标处的不移动的摄影机。</dd>
       <dt>walking(步行模式)</dt>
       <dd>无边界的移动摄影机。</dd>
-      <dt>viewer locked(锁定观看者)</dt>
+      <dt>viewer locked(视角锁定)</dt>
       <dd>位于零坐标处的不移动的摄影机。所有内容都以视图为父节点。</dd>
     </dl>
 
@@ -103,7 +103,7 @@
       <dd>位于零坐标处的不移动的摄影机。</dd>
       <dt>walking(步行模式)</dt>
       <dd>无边界的移动摄影机。</dd>
-      <dt>viewer locked(锁定观看者)</dt>
+      <dt>viewer locked(视角锁定)</dt>
       <dd>位于零坐标处的不移动的摄影机。所有内容都以视图为父节点。</dd>
     </dl><img src="files/puzzles/puzzles-ar-vr-enter-ar-mode.jpg">
 
@@ -149,7 +149,7 @@
 
     [anchor:traverse_controllers]
 
-    <h3>遍历控制器</h3>
+    <h3>traverse controllers(遍历控制器)</h3>
 
     <p>循环遍历所有连接的VR控制器，执行 *do* 槽中指定的拼图。</p>
       
