--- a/manual/zh/puzzles/Advanced.html
+++ b/manual/zh/puzzles/Advanced.html
@@ -200,17 +200,17 @@
 
     <h3>wait promise(等待promise)</h3>
 
-    <p>等待promise被解决或拒绝，并在 <a href="manual/zh/puzzles/Advanced.html#promise_value">promise value</a> 拼图中返回其值（或拒绝原因）。</p>
+    <p>等待promise被解析或被拒绝，并在 <a href="manual/zh/puzzles/Advanced.html#promise_value">promise value</a> 拼图中返回其值（或拒绝原因）。</p>
     <img src="files/puzzles/puzzles-advanced-wait-promise.jpg">
     <p>这个拼图可被用于获取 <a href="manual/zh/puzzles/Scenes.html#export_to_gltf">导出到gltf</a> 和 <a
         href="manual/zh/puzzles/Materials.html#generate_normal_map">generate normal map(生成法线贴图)</a>
-      的值。作为一个异步拼图，这些拼图不会立即返回解决的值。相反，它们会返回 <em>promise</em> 值，这些值在它们被用作输入的拼图中被解决。然而，在少数情况下，这种解决并没有发生。在这些情况下，您应该使用 *wait promise* 来解析promise值。</p>
+      的值。作为一个异步拼图，这些拼图不会立即返回解析值。相反，它们会返回 <em>promise</em> 值，这些值在它们被用作输入的拼图中被解析。但在少数情况下，这种解析并没有发生。在这些情况下，您应该使用 *wait promise* 来解析promise值。</p>
 
     [anchor:promise_value]
 
     <h3>promise值</h3>
 
-    <p>已解决的promise值（在已解决promise的情况下）或错误字符串（在拒绝promise的情况下）。</p>
+    <p>已解析的promise值（在已实现promise的情况下）或错误字符串（在已拒绝promise的情况下）。</p>
 
     [anchor:connector]
 
