--- a/manual/zh/puzzles/Time.html
+++ b/manual/zh/puzzles/Time.html
@@ -49,9 +49,9 @@
 
     [anchor:elapsed_delta]
 
-    <h3>elapsed delta(经过的时间)</h3>
+    <h3>elapsed delta(时间增量)</h3>
 
-    <p>输出距离上一个渲染帧的时间量（秒）。可以和 "every frame(每一帧)" 拼图一起使用，实现与帧无关的动画。</p>
+    <p>输出距离被执行的渲染帧到现在的时间增量（以秒为单位）。可以和 "every frame(每一帧)" 拼图一起使用，可以直接在拼图编辑器里创建动画。</p>
       
     <img
       src="files/puzzles/puzzles-time-elapsed-delta.jpg">
