--- a/manual/zh/index.html
+++ b/manual/zh/index.html
@@ -20,7 +20,7 @@
 
   <p>从左侧选择主题。如果您不知道从哪里开始，请直接从这里开始： <a href="manual/zh/introduction/Beginners-Guide.html">新手入门</a>。</p>
 
-  <p>中文手册官方版本由Verge3D中国区技术代表 <a href="https://verge3d.funjoy.tech/">FunJoy.Tech</a> 维护，并在安装包中随附。您也可以参考由用户<a href="https://zjbcool.com/v3d-user-manual" target="_blank">宅家呗翻译的版本</a>。</p>
+  <p>中文手册官方版本由Verge3D中国区技术代表 <a href="https://verge3d.funjoy.tech/">FunJoy.Tech</a> 维护，并在安装包中随附。
 
   <p>
     本用户手册也有<a href="manual/en/index.html">英文</a>和<a href="manual/ru/index.html">俄文</a>版本。
