拼图章节修订

--- a/manual/en/maya/Lighting-and-Rendering.html
+++ b/manual/en/maya/Lighting-and-Rendering.html
@@ -547,7 +547,7 @@
     <h2>Fit to Camera Edge</h2>
 
     <p>
-      <em>Fit to Camera Edge</em> is a technique to draw screen-space UI elements based on 3ds Max models. This approach to UI design is more “native” to the 3D artist than using HTML/CSS, and does not require external tools. But there is more in it: since the UI elements are genuine 3D objects, you can apply shaders, lighting, animation, morphing – you name it – making them truly interactive and seamlessly integrated into the scene.
+      <em>Fit to Camera Edge</em> is a technique to draw screen-space UI elements based on 3D models. This approach to UI design is more “native” to the 3D artist than using HTML/CSS, and does not require external tools. But there is more in it: since the UI elements are genuine 3D objects, you can apply shaders, lighting, animation, morphing – you name it – making them truly interactive and seamlessly integrated into the scene.
     </p>
 
     <p>
