--- a/manual/zh/blender/Camera.html
+++ b/manual/zh/blender/Camera.html
@@ -73,6 +73,8 @@
 
     <p>*Story Height* - 楼层高度。</p>
 
+    <p>*Enable PointerLock* - 启用光标锁定，捕捉鼠标光标。</p>
+
     [anchor:camera_control_with_puzzles]
 
     <h2>使用拼图控制摄影机</h2>
