--- a/manual/zh/introduction/FAQ.html
+++ b/manual/zh/introduction/FAQ.html
@@ -101,7 +101,7 @@
 
     <h3>我的应用在Chrome直接打开无法加载，但在应用管理器中或者是在Firefox中打开它可以直接运行……</h3>
 
-    <p>由于浏览器供应商实施的安全策略，Web应用无法跨域访问数据，包括从本地文件系统加载的数据（Firefox是一个例外）。因此，建议您使用应用管理器（呈现为本地服务器的形式）进行开发，并在web服务器（或Verge3D
+    <p>由于浏览器供应商实施的安全策略，Web应用无法跨域访问数据，包括从本地文件系统加载的数据（Firefox是一个例外）。因此，建议您使用应用管理器（体现为本地服务器的形式）进行开发，并在web服务器（或Verge3D
       Network）发布应用以供运行。</p>
 
     <p>如果您需要桌面或者移动端应用，您可以通过应用管理器将其转换对应版本的应用。关于如何使用Verge3D创建 <a
