--- a/manual/zh/introduction/Personalizing-Verge3D-Apps.html
+++ b/manual/zh/introduction/Personalizing-Verge3D-Apps.html
@@ -144,7 +144,7 @@ applications/my_awesome_app/my_awesome_app.css
     <p>为你的应用指定有意义的标题(title)和描述(description)，其重要性怎么估计都不过分。</p>
 
     <p>标题显示在浏览器选项卡中，也用于为应用链接添加书签：</p><img src="files/personalizing-verge3d-apps/app-title.jpg" class="centered">
-    <p>标题和说明都会被搜索引擎用来检索您的应用，并在搜索输出中呈现给用户：</p><img src="files/personalizing-verge3d-apps/google-title-description.jpg"
+    <p>标题和说明都会被搜索引擎用来检索您的应用，并在搜索输出中渲染给用户：</p><img src="files/personalizing-verge3d-apps/google-title-description.jpg"
       class="centered">
     <p>要更改应用标题，请在您的主要HTML文件中找到以下代码片段（例如： <em>my_awesome_app.html</em>）：</p>
 
