--- a/manual/zh/maya/Transparency.html
+++ b/manual/zh/maya/Transparency.html
@@ -56,7 +56,7 @@
       <dt>薄壁(Thin Walled)</dt>
       <dd>使用通用的薄壁或基于折射的透明度。</dd>
       <dt>不透明度(Opacity)</dt>
-      <dd>薄壁材料的不透明度系数。</dd>
+      <dd>薄壁材质的不透明度系数。</dd>
       <dt>Alpha Mode</dt>
       <dd>材质透明度模式</dd>
       <dt>深度写入(Depth Write)</dt>
@@ -69,7 +69,7 @@
 
     <h2>glTF兼容的的PBR材质的透明度</h2>
 
-    <p>为了使这些材质具有透明度，应该将透明度贴图作为基础颜色纹理的4（alpha）分量进行烘焙，并将该纹理的 *Alpha* 输出连接到标准表面材料的 *Opacity* 输入。</p><img
+    <p>为了使这些材质具有透明度，应该将透明度贴图作为基础颜色纹理的4（alpha）分量进行烘焙，并将该纹理的 *Alpha* 输出连接到标准表面材质的 *Opacity* 输入。</p><img
       src="files/transparency-maya/gltf-compat-transparency.jpg">
     <p>当没有基础颜色纹理可用时，直接未连接的 *Opacity* 参数。</a>
 
