--- a/manual/zh/puzzles/AR_VR.html
+++ b/manual/zh/puzzles/AR_VR.html
@@ -19,7 +19,10 @@
       
     <img
       src="files/puzzles/puzzles-ar-vr.jpg">
-    <p>关于支持的VR设备，以及开展最佳实践的详细介绍，请参见手册中的 <a href="manual/zh/introduction/AR-VR-development.html">对应章节</a> 。</p>
+
+    <p>
+      关于支持的AR和VR设备，以及开展最佳实践的详细介绍，请参见手册中的 <a href="manual/zh/introduction/AR-VR-development.html">对应章节</a> 。
+    </p>
 
     <h2>内容</h2>
 
