--- a/manual/zh/puzzles/Initialization.html
+++ b/manual/zh/puzzles/Initialization.html
@@ -31,8 +31,8 @@
 
     <dl>
       <dt>compressed assets(压缩资产)</dt>
-      <dd>设置应用加载<strong>.xz</strong>格式的压缩场景，而不是常规的<strong>.gltf</strong>文件（参见<a
-          href="manual/zh/introduction/Asset-compression.html">资产压缩</a>了解详情）。</dd>
+      <dd>设置应用加载<strong>.xz</strong>格式的压缩场景，而不是常规的<strong>.gltf</strong>文件。参见<a
+          href="manual/zh/introduction/Asset-compression.html">资产压缩</a>了解详情。</dd>
 
       <dt>default fullscreen button(默认全屏按钮)</dt>
       <dd>启用位于右上角的默认全屏按钮。</dd>
