--- a/manual/zh/puzzles/Physics.html
+++ b/manual/zh/puzzles/Physics.html
@@ -133,7 +133,11 @@
       <li>*linear velocity* - *线性速度*，设置运动速度矢量。</li>
       <li>*position* - *位置*，设置实体的位置（作用类似于 <a href="manual/zh/puzzles/Physics.html#snap_body">snap body(对齐实体)</a> 的拼图）。
       </li>
-      <li>*restitution* - *恢复*，弹性系数。0 - 实体像粘土一样没有弹性，1 - 实体的行为像由橡胶制成。</li>
+      <li>
+        *rotation* - *旋转*， 设置实体的旋转（欧拉旋转以XYZ为顺序，像 <a href="manual/zh/puzzles/Physics.html#snap_body">snap body()</a> 拼图一样工作）。
+      </li>
+      <li>
+        *restitution* - *恢复*，弹性系数。0 - 实体像粘土一样没有弹性，1 - 实体的行为像由橡胶制成。</li>
       <li>*stiffness* - *刚度*，柔体的刚度，如体积和绳索。</li>
       <li>*torque* - *扭矩*，在一个指定的方向上旋转实体。</li>
       <li>*torque impulse* - *扭矩冲量*，作用类似于*角速度*，但也考虑到了实体的质量（较重的对象将获得较少的旋转速度）。</li>
@@ -163,6 +167,7 @@
       <li>*linear factor* - *线性系数*，指定体的位置自由度（XYZ）。</li>
       <li>*linear velocity* - *线性速度*，运动速度矢量。</li>
       <li>*position* - *位置*，实体的XYZ位置。</li>
+      <li>*rotation* - **， 实体的XYZ欧拉旋转。</li>
       <li>*restitution* - *恢复*，弹性系数。0 - 实体像粘土一样没有弹性，1 - 实体的行为像由橡胶制成。</li>
       <li>*stiffness* - *刚度*，柔体的刚度，如体积和绳索。</li>
       <li>*torque* - *扭矩*，应用于实体的扭矩矢量。</li>
