--- a/manual/zh/puzzles/Plugins.html
+++ b/manual/zh/puzzles/Plugins.html
@@ -1396,7 +1396,7 @@ function code(block) {}
 
     <ul>
         <li>在 <a href="https://www.soft8soft.com/forum/plugins/" target="_blank">Verge3D论坛上发布链接</a>。</li>
-        <li>如果您希望能在 <a href="manual/zh/introduction/Useful-links.html#third_party_plugins">常用链接</a> 章节中被提及，请<a href="https://www.soft8soft.com/contact/" target="_blank">联系我们</a>！</li>
+        <li>写一篇 <a href="https://www.soft8soft.com/wiki/index.php/Main_Page" target="_blank">文章</a> 或在 <a href="manual/zh/introduction/Useful-links.html#third_party_plugins">常用链接</a> 章节中被提及。</li>
         <li>在社交媒体上分享是使用 <strong>#verge3d</strong> 标签。</li>
         <li>在 <a href="https://gumroad.com/" target="_blank">Gumroad</a> 或类似的资源网站上发布。</li>
     </ul>
