--- a/manual/zh/puzzles/Scenes.html
+++ b/manual/zh/puzzles/Scenes.html
@@ -62,6 +62,14 @@
     
     <img src="files/puzzles/puzzles-scenes-unload-scene.jpg">
 
+    [anchor:is_scene_loaded]
+
+    <h3>已加载场景</h3>
+    <p>
+      检查指定场景是否已被加载。当文本值为空时，用于检查主场景是否已加载。
+    </p>
+    <img src="files/puzzles/puzzles-scenes-is-scene-loaded.jpg">
+
     [anchor:enable_rendering]
 
     <h3>enable rendering(启用渲染)</h3>
