--- a/manual/zh/puzzles/System.html
+++ b/manual/zh/puzzles/System.html
@@ -45,6 +45,24 @@
     <img
       src="files/puzzles/puzzles-system-print-performance-info.jpg">
 
+    [anchor:check_performance]
+    
+    <h3>检查性能</h3>
+    <p>
+      检查用户计算机或设备的渲染能力。其底层基于开源库 <a href="https://github.com/pmndrs/detect-gpu" target="_blank">Detect GPU</a> 以进行快速的基准检查并将用户的GPU分类为 “good(好)” 或 “poor(差)”。
+    </p>
+    <img src="files/puzzles/puzzles-system-check-performance.jpg">
+    <p>
+      您可以使用此拼图为性能较差的设备加载更简单的场景或禁用一些消耗图形性能较多的功能（例如后期处理效果）。另一方面，如果用户的GPU性能更加强大，则可以提高渲染的质量。
+    </p>
+    <p>
+      我们还将此性能测试添加到了 <a href="http://soft8soft.com/webglreport" target="_blank">WebGL Report</a> 页面里，以便于您在浏览器中访问此页即可快速检查GPU。
+    </p>
+    <img src="files/puzzles/webgl-report-performance-output.png" style="max-width: 705px">
+    <p class="note">
+      即使用户的GPU报告为 "good(好)" ，也并不意味着您可以任意加载性能繁重的图形资产。您应该始终尽可能多地优化应用场景。
+    </p>
+
     [anchor:feature_available]
 
     <h3>feature available(功能可用)</h3>
