--- a/manual/zh/puzzles/Selectors.html
+++ b/manual/zh/puzzles/Selectors.html
@@ -63,6 +63,20 @@
     <p>该下拉列表包含了一个按字母顺序排列的场景中存在的所有材质的列表。</p>
       
     <img src="files/puzzles/puzzles-selector-material.jpg">
+
+    [anchor:get_entity_by_name]
+
+    <h3>按名称获取</h3>
+    <p>
+      选择由其名称指定的实体（对象、组、动画片段或材质）。
+    </p>
+
+    <img src="files/puzzles/puzzles-selector-get-entity-by-name.jpg">
+    
+    <p>
+      此拼图最常用于动态场景加载情境中，此时您无法在选择器的列表中找到被加载的实体的名称。
+    </p>
+
     <h2>在使用拼图时遇到困难？</h2>
 
     <p>欢迎您随时在 <a href="https://www.soft8soft.com/forums/" target="_blank">论坛</a>上提问！您还可以加入中文用户社区<a href="https://shang.qq.com/wpa/qunwpa?idkey=c31cf6597f3ed7ce68bd47aba6bba23049bf973ac6acc59b0a5a7d1bd933b3ea" target="_blank">QQ群(171678760)</a>，在线寻求帮助。</p>
